2022-10-22T00:44:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3301317608 # 551
* notice: last 14d: unq all: 39 5714
* notice: prev accum: outdated-unq outdated-all / unq all: 1115 74660 / 1185 80310
* notice: next accum: outdated-unq outdated-all / unq all: 1116 75063 / 1185 80777
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -20 / +3 +403 -0 -0 / 3 403
* notice: removed / changed dates: [2022-10-07] / [2022-10-08 2022-10-21]

2022-10-21T16:14:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3298888700 # 550
* notice: last 14d: unq all: 39 5650
* notice: prev accum: outdated-unq outdated-all / unq all: 1115 74660 / 1183 80336
* notice: next accum: outdated-unq outdated-all / unq all: 1115 74660 / 1185 80310
* notice: prev exec diff / last date diff / accum: unq all: +2 +118 -0 -144 / +3 +255 -0 -0 / 3 255
* notice: removed / changed dates: [] / [2022-10-07 2022-10-21]

2022-10-21T08:09:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3295825579 # 549
* notice: last 14d: unq all: 38 5676
* notice: prev accum: outdated-unq outdated-all / unq all: 1115 74660 / 1182 80384
* notice: next accum: outdated-unq outdated-all / unq all: 1115 74660 / 1183 80336
* notice: prev exec diff / last date diff / accum: unq all: +1 +137 -0 -185 / +1 +137 -0 -0 / 1 137
* notice: removed / changed dates: [] / [2022-10-07 2022-10-21]

2022-10-21T00:37:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3293929633 # 548
* notice: last 14d: unq all: 38 5724
* notice: prev accum: outdated-unq outdated-all / unq all: 1114 74258 / 1182 79909
* notice: next accum: outdated-unq outdated-all / unq all: 1115 74660 / 1182 80384
* notice: prev exec diff / last date diff / accum: unq all: +0 +147 -0 -10 / +2 +403 -0 -0 / 2 403