@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-22T00:44:27Z",
-  "count" : 390,
+  "timestamp" : "2022-10-22T08:08:30Z",
+  "count" : 214,
   "count_minmax" : [ 138, 410 ],
-  "count_decinc" : [ -20, +410 ],
+  "count_decinc" : [ -196, +410 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
