@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-10-22T08:08:30Z",
+  "count" : 139,
+  "count_minmax" : [ 139, 139 ],
+  "count_decinc" : [ -0, +139 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
