@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-22T00:44:27Z",
+  "timestamp" : "2022-10-22T08:08:30Z",
   "count_outdated" : 75063,
   "uniques_outdated" : 1116,
-  "count" : 80777,
-  "uniques" : 1185,
+  "count" : 80740,
+  "uniques" : 1187,
   "clones" : [
     {
       "timestamp": "2022-10-08T00:00:00Z",
-      "count": 390,
+      "count": 214,
       "count_minmax": [ 138, 410 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 137, 403 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-10-22T00:00:00Z",
+      "count": 139,
+      "count_minmax": [ 139, 139 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
