@@ -1,3 +1,11 @@
+2022-10-22T08:08:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3302541746 # 552
+* notice: last 14d: unq all: 40 5677
+* notice: prev accum: outdated-unq outdated-all / unq all: 1116 75063 / 1185 80777
+* notice: next accum: outdated-unq outdated-all / unq all: 1116 75063 / 1187 80740
+* notice: prev exec diff / last date diff / accum: unq all: +2 +139 -0 -176 / +2 +139 -0 -0 / 2 139
+* notice: removed / changed dates: [] / [2022-10-08 2022-10-22]
+
 2022-10-22T00:44:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3301317608 # 551
 * notice: last 14d: unq all: 39 5714
